<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyOrder">

    <TextView
        android:id="@+id/imgMyOrderBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/myorderbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMyOrderTitle"
        android:textColor="@color/purple_500"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGoBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/btnClearOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClearOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/txtMyOrderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMyOrderTotal"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <TextView
        android:id="@+id/txtMyOrderAddDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMyOrderAddDrink"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808">

        <RadioButton
            android:id="@+id/radioSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:editable="false"
            android:text="@string/radioSmall"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:buttonTint="@color/purple_700" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioMedium"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:buttonTint="@color/purple_700" />

        <RadioButton
            android:id="@+id/radioLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioLarge"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:buttonTint="@color/purple_700" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="392dp"
        android:layout_height="293dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/foodTitle"
                android:layout_width="142dp"
                android:gravity="left"
                android:padding="6dp"
                android:text="FoodName"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceTitle"
                android:gravity="right"
                android:padding="6dp"
                android:text="$Price"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/food1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/price1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$" />
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>